--- a/messenger-client/.env
+++ b/messenger-client/.env
@@ -7,8 +7,8 @@
 DATABASE_URL="mongodb+srv://daorsa:daorsa@cluster0.dgq11vk.mongodb.net/test"
 NEXTAUTH_SECRET="NEXTAUTH_SECRET"
 
-GITHUB_ID=
-GITHUB_SECRET=
+GITHUB_ID=289b4fc6c3f8a0803347
+GITHUB_SECRET=e5a6fb01f09df58e09e0d57938f01302fcc6ef92
 
-GOOGLE_CLIENT_ID=
-GOOGLE_CLIENT_SECRET=
+GOOGLE_CLIENT_ID=626316655773-c299fp2dk4ppldu2pjbo7dasc0ght6g8.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
